1.6.2 (unreleased)
  - Improves spec performance and simplicity (Mauro George)
  - Handle objects that have a custom #to_hash method (Elliot Shank)

1.6.1
  - Fixes specs on all rails dependencies (Mauro George)
  - Updates specs for mongoid, mongo_mapper and ripple (James Cox)
  - Adds appraisals for simpler version/scenario management (Mauro George)
  - Add Travis (Mauro George)
  - Update documentation (Mauro George)

1.6.0
  semi-major release since it's been a while, and there are several
  improvements.
  - Improves support for new mongoid/moped (Velkitor, Francois Bernier et al)
  - Converts specs to rspec 3+ (Adam Jonas, James Cox)
  - Fixes incompatibility with IPAddr (James Cox, Michael Dvorkin)
  - Fixes incompatibility with the money gem (Michael Dvorkin)
  - Fixes AR::Relation presentation (Sergey Ponomarov)
  - Lazy-loads ActionView (Akira Matsuda)
  - Fixes inspection of abstract classes (Jonathan Priddle)
  - Gets most specs passing, and fixes suite (Eoin Kelly)

1.2.0 <-- NOTE: This is the *last* release supporting Ruby < v1.9.3 and Rails < v3.
  - Added Sequel ORM plugin (Jonathan Davies)
  - Added Ripple plugin (Ruby modeling layer for Riak, Scott Hyndman)
  - Added NoBrainer plugin (Ruby ORM for RethinkDB, Nicolas Viennot)
  - Added formatting for Ruby set objects (Richard Hall)
  - Fixed HTML formatting (Mike McQuaid)
  - Other minor bugs and enhancements

1.1.0
  - Objects are no longer recursively formatted by default. Reenable by using :raw => true option.
  - ap(object) now returns nil when running under IRB or Pry
  - Added support for Mongoid 3 and Moped (Nikolaj Nikolajsen)
  - Improved formatting of MongoMapper objects (George .)
  - ActiveRecord::Relation now renders as array (Dan Lynn)
  - Formatting BigDecimal no longer looses precision (Evan Senter)
  - Added AwesomePrint.irb! and AwesomePrint.pry! convenience methods
  - Fixed conflict with the colorize gem
  - Misc tweaks and bug fixes

1.0.2